part1/03-more-services/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-srv
spec:
  type: ClusterIP
  selector:
    app: pingpong # This is the app as declared in the deployment.
  ports:
    - port: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      targetPort: 9999 # This is the target port
