part1/03-more-services/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-srv
                port:
                  number: 30080
